--- a/Marathon-Skills-2016/Pages/RunnerMyResults.xaml
+++ b/Marathon-Skills-2016/Pages/RunnerMyResults.xaml
@@ -13,6 +13,7 @@
             <RowDefinition Height="50"/>
             <RowDefinition Height="70"/>
             <RowDefinition Height="50"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
@@ -30,6 +31,35 @@
             <TextBlock Text="Возрастная категория:" FontWeight="Bold" FontSize="15" Foreground="#505050" Margin="10"/>
             <TextBlock x:Name="TBlockAgeCat" FontSize="15" Foreground="#505050" Margin="0,10"/>
         </StackPanel>
-        
+        <StackPanel Orientation="Horizontal" Grid.Row="3">
+            <TextBlock Text="Марафон" FontSize="15" Foreground="#B4B4B4" Margin="5,5,140,5"/>
+            <TextBlock Text="Дистанция" FontSize="15" Foreground="#B4B4B4" Margin="0,5,120,5"/>
+            <TextBlock Text="Время" FontSize="15" Foreground="#B4B4B4" Margin="0,5,150,5"/>
+            <TextBlock Text="Итог" FontSize="15" Foreground="#B4B4B4" Margin="5,5,15,5"/>
+            <TextBlock Text="Место по группе" FontSize="15" Foreground="#B4B4B4" Margin="5" TextWrapping="Wrap"/>
+        </StackPanel>
+        <ListView Name="LViewMarathon" Grid.Row="4" Background="Transparent">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="200"/>
+                            <ColumnDefinition Width="200"/>
+                            <ColumnDefinition Width="200"/>
+                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="50"/>
+                        </Grid.ColumnDefinitions>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Year}" FontSize="15" Foreground="#505050" Margin="5"/>
+                            <TextBlock Text="{Binding Country}" FontSize="15" Foreground="#505050" Margin="5"/>
+                        </StackPanel>
+                        <TextBlock Grid.Column="1" Text="{Binding EventType}" FontSize="15" Foreground="#505050" Margin="5"/>
+                        <TextBlock Grid.Column="2" Text="{Binding Time}" FontSize="15" Foreground="#505050" Margin="5"/>
+                        <TextBlock Grid.Column="3" Text="{Binding TotalPlace}" FontSize="15" Foreground="#505050" Margin="5"/>
+                        <TextBlock Grid.Column="4" Text="{Binding CatPlace}" FontSize="15" Foreground="#505050" Margin="5"/>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
